# MPolylla

./: CMakeLists.txt  main.cpp
examples/: 10000random.off  1000random.off  100random.off  pikachu.off
src/: kernel_omp.h  mpolylla_omp.h  triangulation.h
